# makemkv-headless

./: .env  .gitignore  DEVELOPING.md  LICENSE.md  Makefile  README.md  api.sh  attach.sh  config.example.yaml  disc.py  dot-ssh.tgz  features.py  main.py  makemkv_batch.py  movie.py  notes.md  run.sh  setup.sh  show.py  start.sh  stop.sh  test.py  test.ts  test_exception.py  toc.py  util.py  version_bump.sh  web.sh
.github/workflows/: build-api.yaml  build-cli.yaml  build-web.yaml  build.yaml  create-release.yaml  pr-merge.yaml  release-create.yaml  test-workflow.yaml
_archive/: makemkv_batch_old.py
api/: LICENSE.md  Makefile  README.md  __main__.py  config.example.yaml  config.yaml.example  movie.py  pyproject.toml  requirements.txt  show.py  toc.py  util.py
api/curses_interface/: __init__.py
api/disc/: __init__.py
api/interface/: __init__.py
api/makemkv/: __init__.py
api/mkvtoolnix/: __init__.py
api/rest_interface/: json_interface.py  rest_api.py
api/rip/: __init__.py  interactive.py
api/sort/: __init__.py
api/src/: __init__.py  __main__.py  interactive.py  json_serializable.py  main_api.py  movie.py  requirements.txt  toc.py  util.py
api/src/api/: __init__.py  api_response.py  cached_api.py  json_api.py  singletons.py  socket.py  state.py  thread_queue_interface.py
api/src/api/fastapi/singletons/: singletons.py
api/src/api/fastapi/v1/: cache.py  config.py  disc.py  rip.py  state.py  toc.py
api/src/api/flask/: cached_api.py  json_api.py
api/src/api/flask/singletons/: singletons.py
api/src/api/flask/v1/: __init__.py  config.py  disc.py
api/src/api/singletons/: singletons.py  state.py
api/src/api/thread_queue_interface/: __init__.py
api/src/api/v1/: __init__.py  cache.py  config.py  disc.py  rip.py  socket.py  state.py  status.py  tmdb.py  toc.py
api/src/config/: __init__.py
api/src/curses_interface/: __init__.py
api/src/disc/: __init__.py
api/src/interface/: __init__.py  async_queue_interface.py  base_interface.py  message.py  target.py
api/src/makemkv/: __init__.py  asyncio.py  threaded.py
api/src/makemkv_headless/: __main__.py  old_main.py  toc.py  util.py
api/src/makemkv_headless/api/: __init__.py  api_response.py  socket.py  state.py
api/src/makemkv_headless/api/v1/: cache.py  config.py  disc.py  error.py  rip.py  socket.py  state.py  tmdb.py  toc.py
api/src/makemkv_headless/cli/: __init__.py  parsers.py
api/src/makemkv_headless/cli/subcommands/: __init__.py  find_duplicate_media.py  start.py  status.py  stop.py
api/src/makemkv_headless/config/: __init__.py  logging.yaml
api/src/makemkv_headless/disc/: __init__.py
api/src/makemkv_headless/heuristics/: Match.py  MatchSet.py  NamedHeuristic.py  SizeMatch.py
api/src/makemkv_headless/interface/: __init__.py  async_queue_interface.py  base_interface.py
api/src/makemkv_headless/makemkv/: asyncio.py
api/src/makemkv_headless/mkvtoolnix/: __init__.py
api/src/makemkv_headless/models/: config.py  socket.py  state.py
api/src/makemkv_headless/rip_titles/: asyncio.py
api/src/makemkv_headless/sort/: __init__.py
api/src/makemkv_headless/tmdb/: __init__.py
api/src/makemkv_headless_api/: __init__.py  __main__.py  interactive.py  json_serializable.py  main_api.py  toc.py  util.py
api/src/makemkv_headless_api/api/: __init__.py  json_api.py  socket.py  state.py
api/src/makemkv_headless_api/api/v1/: __init__.py  cache.py  config.py  disc.py  error.py  queue.py  rip.py  socket.py  state.py  toc.py
api/src/makemkv_headless_api/config/: __init__.py
api/src/makemkv_headless_api/disc/: __init__.py
api/src/makemkv_headless_api/interface/: async_queue_interface.py  base_interface.py  curses_interface.py  plaintext_interface.py
api/src/makemkv_headless_api/makemkv/: __init__.py  asyncio.py  threaded.py
api/src/makemkv_headless_api/message/: base_message_event.py  build_message.py  message_event.py  progress_message_event.py  progress_value_message_event.py  rip_start_stop_message_event.py  toc_complete_message_event.py
api/src/makemkv_headless_api/mkvtoolnix/: __init__.py
api/src/makemkv_headless_api/models/: config.py  socket.py  sort.py  state.py  toc.py
api/src/makemkv_headless_api/rip_titles/: asyncio.py  interactive.py  rip_titles.py  threaded.py
api/src/makemkv_headless_api/sort/: __init__.py
api/src/makemkv_headless_api/threads/: __init__.py
api/src/makemkv_headless_api/tmdb/: __init__.py
api/src/makemkv_headless_server/: features.py
api/src/makemkv_headless_server/api/v1/: socket.py
api/src/makemkv_headless_server/interface/: __init__.py
api/src/message/: base_message_event.py  progress_message_event.py  progress_value_message_event.py  toc_complete_message_event.py
api/src/mkvtoolnix/: __init__.py
api/src/models/: config.py  makemkv.py  socket.py  state.py  tmdb.py  toc.py
api/src/rip_titles/: asyncio.py  interactive.py  rip_titles.py  threaded.py
api/src/sort/: __init__.py
api/src/test/: test_interface.py
api/src/tmdb/: __init__.py  search.py
api/test/: test_interface.py  test_makemkv.py  test_movie.py  test_sort.py  test_toc.py  test_util.py
api/test/config/: test_config.py
api/test/data/: toc_test_data.py
api/tmdb/: __init__.py
app/: __main__.py  json_serializable.py  toc.py  util.py
app/api/: __init__.py  interface.py  json_api.py  json_serializable.py  (+1 more)
cli/: Makefile  README.md  pyproject.toml  requirements.txt
cli/makemkv_headless_cli/: __main__.py
cli/makemkv_headless_cli/cli/subcommands/: find_duplicate_media.py
cli/src/: __main__.py
cli/src/cli/: parsers.py
cli/src/cli/subcommands/: __init__.py
cli/src/makemkv_headless_cli/cli/: parsers.py
cli/src/makemkv_headless_cli/cli/subcommands/: __init__.py  find_duplicate_media.py
cli/src/makemkv_headless_cli/heuristics/: __init__.py
curses_interface/: __init__.py
disc/: __init__.py
interface/: __init__.py
makemkv/: __init__.py
mkvtoolnix/: __init__.py
scripts/: find-duplicate-media.py  requirements.txt
tmdb/: __init__.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+104 files in other folders)
