[project]
version = "0.0.2.dev3"
requires-python = ">= 3.14"
name = "makemkv-headless-api"
dependencies = [
 "fastapi>=0.135.3",
 "pydantic>=2.12.5",
 "pyyaml>=6.0.3",
 "requests>=2.33.1",
 "starlette>=1.0.0",
 "uvicorn>=0.44.0",
 "websockets>=16.0",
]

authors = [{ name = "enigma0z", email = "enigma.0za@gmail.com" }]
maintainers = [{ name = "enigma0z", email = "enigma.0za@gmail.com" }]

description = "Python wrapper-server built around makemkvcli and with built-in organization features for Jellyfin servers"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
    "makemkv",
    "makemkv-headless",
    "makemkv-server",
    "jellyfin",
    "bd",
    "bdrom",
    "libbluray",
    "dvd",
    "rip",
    "video",
    "ffmpeg",
    "mkv",
]

[project.urls]
Homepage = "https://github.com/enigma0Z/makemkv-headless"
Documentation = "https://github.com/enigma0Z/makemkv-headless/blob/main/README.md"
Repository = "https://github.com/enigma0Z/makemkv-headless.git"
"Bug Tracker" = "https://github.com/enigma0Z/makemkv-headless/issues"
Changelog = "https://github.com/enigma0Z/makemkv-headless/blob/main/CHANGELOG.md"

[project.scripts]
mmh_api = "makemkv_headless_api.__main__:main"

[build-system]
requires = ["uv_build >= 0.11.6, < 0.12"]
build-backend = "uv_build"

# [tool.hatch.version]
# path = 'VERSION'
# pattern = "^(?P<version>.+)$"

# [tool.hatch.build.targets.wheel]
# ignore-vcs = true
# artifacts = [
#   "*.js", 
#   "*.html", 
#   "ui/dist/**/*"
# ]
# packages = ["src/makemkv_headless_api"]
