[project]
version = "0.4.1"
requires-python = ">= 3.12"
name = "makemkv-headless"
dependencies = [
 "fastapi>=0.135.3",
 "humanfriendly>=10.0",
 "pydantic>=2.12.5",
 "pyyaml>=6.0.3",
 "requests>=2.33.1",
 "starlette>=1.0.0",
 "uvicorn>=0.44.0",
 "websockets>=16.0",
]

authors = [{ name = "enigma0z", email = "enigma.0za@gmail.com" }]
maintainers = [{ name = "enigma0z", email = "enigma.0za@gmail.com" }]

description = "Python wrapper-server built around makemkvcli and with built-in organization features for Jellyfin servers"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
    "makemkv",
    "makemkv-headless",
    "makemkv-server",
    "jellyfin",
    "bd",
    "bdrom",
    "libbluray",
    "dvd",
    "rip",
    "video",
    "ffmpeg",
    "mkv",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python 3.12",
  "Programming Language :: Python 3.13",
  "Programming Language :: Python 3.14",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Backup"
]

[project.urls]
Homepage = "https://github.com/enigma0Z/makemkv-headless"
Documentation = "https://github.com/enigma0Z/makemkv-headless/blob/main/README.md"
Repository = "https://github.com/enigma0Z/makemkv-headless.git"
"Bug Tracker" = "https://github.com/enigma0Z/makemkv-headless/issues"
Changelog = "https://github.com/enigma0Z/makemkv-headless/blob/main/CHANGELOG.md"

[project.scripts]
mmh = "makemkv_headless.__main__:main"

[build-system]
requires = ["uv_build >= 0.11.6, < 0.12"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
